splunk_instances/vpc.tf


# Define our VPC
resource "aws_vpc" "cnc_attack" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name = "cnc-attack-vpc"
  }
}

# Define the public subnet
resource "aws_subnet" "public-subnet" {
  vpc_id            = aws_vpc.cnc_attack.id
  cidr_block        = var.public_subnet_cidr
  availability_zone = "us-east-1a"
  #availability_zone = "us-east-2a"
  tags = {
    Name = "Public Subnet"
  }
}


# Define the internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.cnc_attack.id

  tags = {
    Name = "cnc igw"
  }
}

# Define the route table
resource "aws_route_table" "web-public-rt" {
  vpc_id = aws_vpc.cnc_attack.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "RT for public subnet"
  }
}

# Assign the route table to the public Subnet
resource "aws_route_table_association" "web-public-rt" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.web-public-rt.id
}
